syntax = "proto3";
package tuno;

service Tuno {
  // Echo request that returns the same message
  rpc Echo(EchoRequest) returns (EchoResponse);
  
  // Stream request that returns binary data
  rpc Stream(StreamRequest) returns (StreamResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message StreamRequest {
  string object_id = 1;
}

message StreamResponse {
  bytes data = 1;
}
